<resources>
    <string name="app_name"> 05/HY/2017 mCIC v5</string>
    <string name="title_activity_main">CIC Case List</string>
    <string name="title_activity_detail">Case Detail</string>
    <string name="title_activity_showsinglephoto">Case Photo</string>
    <string name="label_filter">Filter :  </string>
    <string name="label_lastUpdate">Last Update:</string>
    <string name="label_go">GO</string>
    <string name="label_logo">Logo</string>
    <string name="label_acompdate">Actual Comp Date</string>
    <string name="text_lastUpdate">01 Jan 00:00:00</string>
    <string name="servletIP">www.emms.sfk05hy2017.com.hk</string>
    <string name="servletPort">90</string>
    <string name="serviceName">SFK2</string>
    <string name="emmsIP">www.emms.sfk05hy2017.com.hk</string>
    <string name="permission_necessary">permission_necessary</string>
    <string name="storage_permission_is_encessary_to_wrote_event">storage_permission_is_encessary_to_wrote_event</string>
    <string name="label_LoginName">Name :</string>
    <string name="label_LoginPw">Password :</string>
    <string name="label_LoginBtn">Login</string>
    <string name="blank">blank</string>
    <string name="google_project_id">367024193522</string>
    <string name="search">Case NO / Street</string>
    <string name="jpg_compress_ratio">100</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">mCIC</string>
</resources>
