<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    tools:context="com.sfk.mcic.LoginActivity">

    <ImageView
        android:id="@+id/imgBlank1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:contentDescription="@string/blank"
        app:srcCompat="@drawable/blank" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:contentDescription="@string/label_logo"
        app:srcCompat="@drawable/sfk_logo" />

    <TextView
        android:id="@+id/labelTitle"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imgBlank2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/blank"
        app:srcCompat="@drawable/blank" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelLoginName"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_LoginName"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextLoginName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelLoginPw"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_LoginPw"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextLoginPw"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:text="@string/label_LoginBtn" />

    <ImageView
        android:id="@+id/imgBlank3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:contentDescription="@string/blank"
        app:srcCompat="@drawable/blank" />

</LinearLayout>